# freedesktop-icons

./: Cargo.toml
src/: lib.rs
src/theme/: parse.rs
