[package]
name = "freedesktop-icons"
version = "0.4.0"
edition = "2021"

license = "MIT"
description = "A Freedesktop Icons lookup crate"
repository = "https://github.com/oknozor/freedestkop-icons"
readme = "README.md"
keywords = ["icons", "gui", "freedesktop"]

[dependencies]
dirs = "6.0.0"
thiserror = "2.0.18"
once_cell = "1.21.4"
xdg = "2.5.2"
tracing = "0.1.44"
ini_core = "0.2.0"

[dev-dependencies]
speculoos = "0.13.0"
linicon = "2.3.0"
gtk4 = "0.11"
criterion = "0.8"

[features]
default = []
local_tests = []

[[bench]]
name = "simple_lookup"
harness = false
